# quantflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  HOW_IT_WORKS.md  Makefile  PLAN.md  PROGRESS.md  README.md  SPEC.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  railway.json
.github/workflows/: ci.yml
apps/api/: main.py
apps/worker/: main.py
apps/worker/tasks/: signal_pipeline.py
config/: default.yaml  prometheus.yml
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/backtest/: page.tsx
frontend/src/app/settings/: page.tsx
frontend/src/app/trades/: page.tsx
frontend/src/components/: EquityChart.tsx  MetricCard.tsx  NavBar.tsx  PositionsTable.tsx  RegimeBadge.tsx  RiskPanel.tsx  SharedHeader.tsx  SignalPanel.tsx
frontend/src/hooks/: usePolling.ts
frontend/src/lib/: api.ts
migrations/: 001_initial_schema.sql  002_orders_signal_linkage.sql  003_sentiment_title_notnull.sql  004_model_artifacts.sql  005_schema_migrations.sql
models/lightgbm_latest/: metadata.json  model.pkl
monitoring/grafana/dashboards/: quantflow.json
monitoring/grafana/provisioning/dashboards/: default.yaml
scripts/: backfill_candles.py  migrate.py  run_ablation.py  run_backtest.py
tests/integration/: test_backtest_engine.py  test_binance_adapter.py
tests/unit/: test_cost_model.py  test_labeling.py  test_metrics.py  test_normalizer.py  test_position_sizer.py  test_regime_detector.py  test_risk_checks.py  test_signal_fusion.py  test_technical.py  test_walk_forward.py
