[project]
name = "ai-trading-system"
version = "0.1.0"
description = "Production-oriented AI trading system with regime-gated MoE signals"
requires-python = ">=3.12"
dependencies = [
    # Data & Exchange
    "ccxt>=4.0",
    "pandas>=2.2",
    "numpy>=1.26",
    "pyarrow>=15.0",
    # Database
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "alembic>=1.13",
    # Cache
    "redis>=5.0",
    # ML
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "hmmlearn>=0.3",
    # API
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    # Config & Logging
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "structlog>=24.1",
    # Monitoring
    "prometheus-client>=0.20",
    # Scheduling
    "apscheduler>=3.10",
    # CLI
    "click>=8.1",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "ruff>=0.3",
    "mypy>=1.8",
    "types-PyYAML",
    "types-redis",
]
sentiment = [
    "sentence-transformers>=2.5",
    "praw>=7.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages", "apps", "scripts"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "ccxt.*",
    "lightgbm.*",
    "hmmlearn.*",
    "apscheduler.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "integration: marks tests requiring external services",
]
